--- a/app/src/main/res/layout/fragment_c_sharp_conditional_statements_4.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_conditional_statements_4.xml
@@ -15,8 +15,8 @@
         <TextView
             android:id="@+id/P_Variables_Text1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="If statement"
+            android:layout_height="28dp"
+            android:text="else-if statements"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -27,7 +27,7 @@
             android:id="@+id/P_Variables_Text2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Use the if statement to specify a block of C# code to be executed if a condition is True."
+            android:text="Use the else if statement to specify a new condition if the first condition is False."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -58,7 +58,7 @@
             app:layout_constraintTop_toBottomOf="@+id/p_Operators_Text">
 
             <WebView
-                android:id="@+id/c_if_code"
+                android:id="@+id/c_else_if_code"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/font"
@@ -108,49 +108,19 @@
             app:layout_constraintTop_toBottomOf="@+id/condition_btn">
 
             <WebView
-                android:id="@+id/c_if_code1"
+                android:id="@+id/c_else_if_example_code"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/font"
                 tools:ignore="WebViewLayout" />
         </HorizontalScrollView>
 
-        <ImageView
-            android:id="@+id/condition_btn1"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="16dp"
-            android:contentDescription="@string/codey_python_cut"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/p_condition_imageView2"
-            app:srcCompat="@drawable/codey_python_cut" />
-
-        <Button
-            android:id="@+id/C_conditional_DYK1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:text="@string/dyk"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:theme="@style/lionelButton"
-            app:cornerRadius="10dp"
-            app:layout_constraintBottom_toBottomOf="@+id/condition_btn1"
-            app:layout_constraintEnd_toStartOf="@+id/guideline7"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/condition_btn1"
-            app:layout_constraintTop_toTopOf="@+id/condition_btn1"
-            app:layout_constraintVertical_bias="0.615"
-            app:strokeColor="#AAAAAA"
-            app:strokeWidth="0.1dp"
-            tools:ignore="UnknownIdInLayout" />
         <TextView
             android:id="@+id/c_condition_Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:text="@string/c_condition1"
+            android:text="In the example above, time (22) is greater than 10, so the first condition is False. The next condition, in the else if statement, is also False, so we move on to the else condition since condition1 and condition2 is both False - and print to the screen &quot;Good evening&quot;. However, if the time was 14, our program would print &quot;Good day.&quot; "
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -189,7 +159,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="I'd be happy to provide you with some examples of for loop to help you understand how they work."
+            android:text="I'd be happy to provide you with some examples of else-if statement to help you understand how they work."
             app:layout_constraintBottom_toBottomOf="@+id/p_condition_imageView2"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
