finish c# missing switch

--- a/app/src/main/res/layout/fragment_c_sharp_conditional_statements_6.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_conditional_statements_6.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/P_loop_btnQ1"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="[add here]"
+                android:text="Can I use conditional statements to control loop execution?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -58,7 +58,7 @@
                 android:id="@+id/P_loop_btnQ2"
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
-                android:text="[add here]"
+                android:text="Can I have multiple conditions in an if statement in C#?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
@@ -75,7 +75,7 @@
                 android:layout_width="271dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="68dp"
-                android:text="[add here]"
+                android:text="How do I write nested conditional statements in C#?"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
